tolk-tester/tests/invalid-syntax/err-3173.tolk
struct Pair<T1 {
    first: T1;
}

/**
@compilation_should_fail
@stderr expected `>`, got `{`
 */
